[package]
name = "local-server"
version = "0.1.0"
authors = ["Kaan Dalkıran <72474584+Keaton296@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "local-server"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
anyhow = "1.0.86"
wifi         = { path = "./wifi" }
embedded-svc = "0.27.1"
toml-cfg = "0.2.0"
esp-idf-hal = "0.43.1"

[build-dependencies]
embuild = "0.31.3"
toml-cfg = "0.2.0"